# Auto-BCI

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.agents/skills/autobci-harness/: SKILL.md
dashboard/: index.html
examples/builtin_classifier/: Program.md  README.md  program.json
src/autobci_harness/: __init__.py  cli.py
src/autobci_harness/fixtures/: builtin_classifier.csv
tests/: test_mvp_cli.py  test_public_release_hygiene.py
