[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobci"
version = "0.1.0"
description = "A local harness for verifiable agent research loops."
requires-python = ">=3.10"
dependencies = []
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
autobci = "autobci_harness.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autobci_harness = ["fixtures/*.csv"]
